2001-07-13 Terry Biggs <tbiggs@users.sourceforge.net>

	* load and save bookmark ctree is working
	* add bookmark menu item added to popup windows
	  for Text, commentary and lex/dict. This adds bookmark
	  to the ctree.

2001-07-11 Terry Biggs <tbiggs@users.sourceforge.net>

	* added module descriptions as tooltips to popup menus
	* changed from module names to module descriptions in shourtcut bar
	* added a number of settings to the preferences.conf


2001-07-05 Terry Biggs <tbiggs@users.sourceforge.net>

	* worked on unicode support stuff - help
	* added gs_bookmarks.* and sw_latin1utf8.*
	* added ctree to shortcut bar for bookmarks	


2001-07-03 Terry Biggs <tbiggs@users.sourceforge.net>

	* worked on unicode support stuff - help
	* added a view text dialog 
	* changed about module dialog to html

2001-06-30 Terry Biggs <tbiggs@users.sourceforge.net>

	* added files


2001-05-14 Terry Biggs <tbiggs@users.sourceforge.net>
 
	* added gs_viewtext_dlg.c and gs_viewtext_dlg.h
	* changed gs_viewcomm.* and gs_viewdict.* to gs_viewcomm_dlg.* and gs_viewdict_dlg.*

2001-04-09 Terry Biggs <tbiggs@users.sourceforge.net>

	* release 0.4.1
	* added include for stricmp <>
	* fixed view/interlinear menu bug - caused segfault and crash.
	* add 4th and 5th view/interlinear menus


2001-04-05 Terry Biggs <tbiggs@users.sourceforge.net>

	* release 0.4.0
	* added addrenderfilterSWORD function
	* gnomesword requires GtkHTML-0.8.0 or later


2001-03-28 Terry Biggs <tbiggs@users.sourceforge.net>

	* added check for save if studypad file is modified on open and new


2001-03-27 Terry Biggs <tbiggs@users.sourceforge.net>

	* 0.3pre2
	* added dialog for viewing commentary modules
	* added files - gs_viewcomm.c and gs_viewcomm.h
	* fixed delete note bug
	

2001-03-20 Terry Biggs <tbiggs@users.sourceforge.net>

	* changes in the look of Bible text modules

2001-03-17 Terry Biggs <tbiggs@users.sourceforge.net>
	
	* added files  gs_display.cpp and gs_display.h 
